@@ -36,6 +36,26 @@
     </listitem>
 -->
     <listitem>
+      <para>2013-01-24</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Remove bashisms from init-functions 
+          file in the boot scripts. </para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
+      <para>2013-01-24</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Upgrade to e2fsprogs-1.42.7.  Fixes
+          <ulink url="&lfs-ticket-root;3274">#3274</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2013-01-22</para>
       <itemizedlist>
         <listitem>
