@@ -107,10 +107,10 @@
 <!-- NOTE: When updating e2fsprogs, remember to check the list
      of acceptable features that can be shown by debugfs in
      chapter02/creatingfilesystem.xml -->
-<!ENTITY e2fsprogs-version "1.42.6">
-<!ENTITY e2fsprogs-size "5,781 KB">
+<!ENTITY e2fsprogs-version "1.42.7">
+<!ENTITY e2fsprogs-size "5,856 KB">
 <!ENTITY e2fsprogs-url "&sourceforge;e2fsprogs/e2fsprogs-&e2fsprogs-version;.tar.gz">
-<!ENTITY e2fsprogs-md5 "9e444c240c1001b3292d108fbad0f49c">
+<!ENTITY e2fsprogs-md5 "a1ec22ef003688dae9f76c74881b22b9">
 <!ENTITY e2fsprogs-home "http://e2fsprogs.sourceforge.net/">
 <!ENTITY e2fsprogs-ch6-du "64 MB">
 <!ENTITY e2fsprogs-ch6-sbu "1.7 SBU">
@@ -302,7 +302,7 @@
 <!ENTITY less-ch6-du "3.8 MB">
 <!ENTITY less-ch6-sbu "less than 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20121013">                 <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20130123">                 <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">         <!-- Updated in Makefile -->
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.bz2">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">           <!-- Updated in Makefile -->
